--- a/.github/workflows/build_image.yml
+++ b/.github/workflows/build_image.yml
@@ -29,7 +29,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secrets.ACCESS_TOKEN }}
+          password: ${{ secrets.PUBLISH_IMAGE_TOKEN }}
       - name: Push to GitHub Packages
         uses: docker/build-push-action@v2
         with:
