--- a/.github/workflows/build_image.yml
+++ b/.github/workflows/build_image.yml
@@ -3,6 +3,7 @@ on:
   release:
     types:
       - published
+      - edited
 jobs:
   push_to_registry:
     name: Push Docker image to GitHub Packages
