--- a/.github/workflows/build_image.yml
+++ b/.github/workflows/build_image.yml
@@ -4,6 +4,7 @@ on:
     types:
       - published
       - edited
+      - prereleased
 jobs:
   push_to_registry:
     name: Push Docker image to GitHub Packages
