--- a/.github/workflows/build_image.yml
+++ b/.github/workflows/build_image.yml
@@ -18,7 +18,7 @@ jobs:
           DOCKER_IMAGE=ghcr.io/alercebroker/s3_step
           VERSION=latest
           if [[ $GITHUB_REF == refs/tags/* ]]; then
-            VERSION=${GITHUB_REF#v}
+            VERSION=${GITHUB_REF#refs/tags/}
           fi
           TAGS="${DOCKER_IMAGE}:${VERSION}"
           if [[ $VERSION =~ ^[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}$ ]]; then
