--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
 boto3==1.10.8
+apf==1.0.1
 -e git+https://git@github.com/alercebroker/db-plugins.git#egg=db-plugins
--e git+https://git@github.com/alercebroker/APF@develop#egg=APF
